--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
-<body class="bg-[url('/images/bg-small.jpg')] bg-cover bg-center bg-no-repeat h-screen">
+<body class="bg-[url('/img/bg-small.webp')] bg-cover bg-center bg-no-repeat h-screen">
     <div class="wrapper bg-[rgba(0,0,0,0.7)] h-full">
 
         <!-- Navbar -->
         <nav class="bg-[rgba(0,0,0,0.5)] flex items-center justify-center py-1">
-            <img src="images/logo.png" alt="Logo" class="w-[3rem]">
+            <img src="img/logo.webp" alt="Logo" class="w-[3rem]">
             <p class="text-3xl font-light text-cyan-100">event<span class="font-black">ER</span></p>
         </nav>
 
