--- a/index.html
+++ b/index.html
@@ -35,12 +35,16 @@
                     From concerts and workshops to exclusive gatherings, eventER helps you discover, book, and get
                     reminders for events that match your vibe and age group. Never miss another moment!
                 <p>
-                <button class="mt-20 text-3xl border border-cyan-100 px-10 py-5 rounded-md hover:bg-cyan-100 hover:text-gray-800">
+                <button 
+                    id="browse-events-btn"
+                    class="mt-20 text-3xl border border-cyan-100 px-10 py-5 rounded-md hover:bg-cyan-100 hover:text-gray-800">
                     Browse Events >
                 </button>
             </div>
         </header>
     </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
