--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         </header>
     </div>
 
+    
+    <!-- Script -->
     <script>
         // Open events file
         document.querySelector('#browse-events-btn').addEventListener('click', function () {
