--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         </header>
     </div>
 
-    
+
     <!-- Script -->
     <script>
-        // Open events file
+        // Open events file when 'Browse Evetns' button is clicked
         document.querySelector('#browse-events-btn').addEventListener('click', function () {
             window.location.href = './events.html';
         })
