--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
-<body class="bg-[url('/img/bg-small.webp')] bg-cover bg-center bg-no-repeat h-screen">
+<body class="bg-[url('img/bg-small.webp')] bg-cover bg-center bg-no-repeat h-screen">
     <div class="wrapper bg-[rgba(0,0,0,0.7)] h-full">
 
         <!-- Navbar -->
