--- a/events.html
+++ b/events.html
@@ -35,7 +35,7 @@
                         <i class="fa-solid fa-square-xmark"></i>
                     </p>
                     <!-- Title -->
-                    <div id="event-title" class="font-bold md:text-5xl mb-2"></div>
+                    <div id="event-title" class="font-bold text-3xl md:text-5xl mb-2"></div>
                     <!-- Description -->
                     <p id="event-description" class="text-gray-300 md:text-2xl"></p>
                     <div class="py-8">
