--- a/events.html
+++ b/events.html
@@ -94,7 +94,8 @@
 
     </div> <!-- wrapper -->
     <footer class="bg-[rgba(0,0,0,0.8)] text-center py-2 mt-5">
-        <p class="text-gray-200">&copy; 2025 <span class="font-light text-cyan-100">event<span class="font-black">ER</span></span></p>
+        <p class="text-gray-200">&copy; 2025 <span class="font-light text-cyan-100">event<span
+                    class="font-black">ER</span></span></p>
     </footer>
 
 
