--- a/create-account.html
+++ b/create-account.html
@@ -40,8 +40,7 @@
                 <p class="text-3xl md:text-5xl font-bold mb-2">
                     Create account first
                 </p>
-                <form id="create-account"
-                    class="bg-gray-200 shadow-md rounded px-8 pt-6 pb-8 mb-4">
+                <form id="create-account" class="bg-gray-200 shadow-md rounded px-8 pt-6 pb-8 mb-4">
 
                     <!-- First Name -->
                     <div class="mb-4">
@@ -104,14 +103,14 @@
                         </label>
                         <input
                             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-1 leading-tight focus:outline-none"
-                            list="city" name="city" placeholder="Select your city">
+                            list="city" id="city-input" name="city" placeholder="Select your city">
                         <datalist id="city">
                             <option value="Asayta"></option>
                             <option value="Bahir Dar"></option>
                             <option value="Addis Ababa"></option>
                             <option value="Hawassa"></option>
                             <option value="Jijiga"></option>
-                            <option value="Wolita Sodo"></option>
+                            <option value="Wolaita Sodo"></option>
                             <option value="Mekelle"></option>
                             <option value="Harar"></option>
                             <option value="Asosa"></option>
@@ -120,6 +119,7 @@
                             <option value="Bonga"></option>
                             <option value="other"></option>
                         </datalist>
+                        <p id="city-error" class="text-red-500 text-xs italic hidden"></p>
                     </div>
 
                     <!-- Date of Birth -->
@@ -130,7 +130,26 @@
                         <input
                             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-1 leading-tight focus:outline-none"
                             id="dob" type="date" name="date-of-birth">
-                        <p id="confirm-password-error" class="text-red-500 text-xs italic hidden"></p>
+                        <p id="dob-error" class="text-red-500 text-xs italic hidden"></p>
+                    </div>
+
+                    <!-- Gender -->
+                    <div class="mb-4">
+                        <label class="block text-gray-700 text-sm font-bold mb-2" for="dob">
+                            Gender
+                        </label>
+                        <div class="flex items-center gap-x-3">
+                            <!-- Male -->
+                            <input id="male" name="gender" type="radio" value="male"
+                                class="size-4 rounded-full border border-gray-300 text-indigo-600">
+                            <label for="male" class="text-sm font-medium text-gray-900">Male</label>
+
+                            <!-- Female -->
+                            <input id="female" name="gender" type="radio" value="female"
+                                class="size-4 rounded-full border border-gray-300 text-indigo-600">
+                            <label for="female" class="text-sm font-medium text-gray-900">Female</label>
+                        </div>
+                        <p id="gender-error" class="text-red-500 text-xs italic hidden"></p>
                     </div>
 
                     <!-- Password -->
@@ -163,15 +182,20 @@
                             Submit
                         </button>
                     </div>
+
+                    <!-- Under-age error message -->
+                    <p class="text-center text-red-500 font-semibold">
+
+                    </p>
                 </form>
 
             </div><!-- create-account -->
-
-            <!-- Footer Message -->
-            <p class="text-center text-gray-700 text-xs absolute bottom-4 left-1/2 transform -translate-x-1/2">
-                &copy;2025 eventER. All rights reserved.
-            </p>
         </div> <!-- from-wrapper -->
+
+        <!-- Footer Message -->
+        <p class="text-center text-gray-700 text-xs absolute bottom-4 left-1/2 transform -translate-x-1/2">
+            &copy;2025 eventER. All rights reserved.
+        </p>
     </div> <!-- wrapper -->
 
     <!-- https://www.upwork.com/jobs/~021922635711714623190 -->
