--- a/create-account.html
+++ b/create-account.html
@@ -11,32 +11,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <style>
-        /* Hide scrollbar but allow scrolling */
-        #create-account::-webkit-scrollbar {
-            display: none;
-        }
-
-        #create-account {
-            -ms-overflow-style: none;
-            /* IE and Edge */
-            scrollbar-width: none;
-            /* Firefox */
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="wrapper flex flex-col h-screen">
-        <!-- Navbar -->
-        <!-- <nav class="bg-[rgba(0,0,0,0.8)] flex items-center justify-center py-1">
-            <img src="img/logo.webp" alt="Logo" class="w-[3rem]">
-            <p class="text-3xl font-light text-cyan-100">event<span class="font-black">ER</span></p>
-        </nav> -->
-
+        
         <!-- Form wrapper -->
-        <div id="form-wrapper" class="relative flex justify-center pt-6 h-full">
-            <div id="create-account" class="w-full max-w-sm md:max-w-lg max-h-[90%] overflow-y-scroll">
+        <div id="form-wrapper" class="relative pt-6 h-full">
+            <div id="create-account" 
+                class="w-full max-w-sm md:max-w-lg max-h-[90%] overflow-y-scroll slide-in
+                    absolute top-1/2 left-1/2 transform -translate-1/2 z-10">
                 <p class="text-3xl md:text-5xl font-bold mb-2">
                     Create account first
                 </p>
@@ -188,8 +173,42 @@
 
                     </p>
                 </form>
-
             </div><!-- create-account -->
+
+            <!-- User Details -->
+             <div id="user-detail-wrapper"
+                class="w-full max-w-sm md:max-w-lg max-h[90%]
+                    absolute top-1/2 left-1/2 transform -translate-1/2 opacity-0 z-0">
+                <p class="text-gray-900 bg-green-400 mb-2 p-4 rounded-full">
+                    Your data is submitted successfully!
+                </p>
+                <div id="user-detail" class="bg-cyan-100 shadow-md rounded px-8 pt-6 pb-8 mb-4">
+                    <p class="mb-2">
+                        <span class="font-semibold">Full Name</span>
+                        <span id="user-full-name" class="ml-2"></span>
+                    </p>
+                    <p class="mb-2">
+                        <span class="font-semibold">Email</span>
+                        <span id="user-email" class="ml-2"></span>
+                    </p>
+                    <p class="mb-2">
+                        <span class="font-semibold">Phone</span>
+                        <span id="user-phone" class="ml-2"></span>
+                    </p>
+                    <p class="mb-2">
+                        <span class="font-semibold">Address</span>
+                        <span id="user-address" class="ml-2"></span>
+                    </p>
+                    <p class="mb-2">
+                        <span class="font-semibold">Age</span>
+                        <span id="user-age" class="ml-2"></span>
+                    </p>
+                    <p class="mb-2">
+                        <span class="font-semibold">Gender</span>
+                        <span id="user-gender" class="ml-2"></span>
+                    </p>
+                </div>
+             </div>
         </div> <!-- from-wrapper -->
 
         <!-- Footer Message -->
