--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
-<body class="bg-[url('img/bg-small.webp')] bg-cover bg-center bg-no-repeat h-screen">
-    <div class="wrapper bg-[rgba(0,0,0,0.7)] h-full">
+<body class="bg-[url('img/bg-larg.webp')] bg-cover bg-center bg-no-repeat h-screen">
+    <div class="wrapper bg-[rgba(255,255,255,0.6)] h-full">
 
         <!-- Navbar -->
-        <nav class="bg-[rgba(0,0,0,0.5)] flex items-center justify-center py-1">
+        <nav class="bg-[rgba(0,0,0,0.6)] flex items-center justify-center py-1">
             <img src="img/logo.webp" alt="Logo" class="w-[3rem]">
             <p class="text-3xl font-light text-cyan-100">event<span class="font-black">ER</span></p>
         </nav>
 
         <!-- Hero -->
-        <header class="text-white text-center lg:px-[10rem]">
+        <header class="text-gray-900 text-center lg:px-[10rem]">
             <div class="header-wrapper px-1 flex flex-col mt-[5rem]">
-                <p class="text-cyan-100 text-[18px]">Book moments that matter.</p>
+                <p class="text-cyan-500 text-[18px]">Book moments that matter.</p>
                 <p class="text-4xl md:text-5xl font-light mb-8">Find and book the best events around you ; fast, simple,
                     and personalized.</p>
 
@@ -36,7 +36,7 @@
                     reminders for events that match your vibe and age group. Never miss another moment!
                 <p>
                     <button id="browse-events-btn"
-                        class="mt-20 text-3xl border border-cyan-100 px-10 py-5 rounded-md hover:bg-cyan-100 hover:text-gray-800">
+                        class="mt-20 text-3xl border px-10 py-5 rounded-md hover:bg-gray-900 hover:text-cyan-100">
                         Browse Events >
                     </button>
             </div>
