--- a/events.html
+++ b/events.html
@@ -70,29 +70,17 @@
                     <!-- Book Now -->
                     <p class="text-center">
                         <button
-                            class="book-now mb-2 text-lg border border-gray-500 px-10 py-3 rounded-md hover:bg-cyan-100 hover:text-gray-800">
+                            id="book-now"
+                            class="b-2 text-lg border border-gray-500 px-10 py-3 rounded-md hover:bg-cyan-100 hover:text-gray-800">
                             Book Now
                         </button>
                     </p>
                 </div>
             </div> <!-- events-detail -->
         </div> <!-- event-list -->
-
-        <!-- Event detail section -->
-        <!-- <div id="event-detail" class="hidden">
-            <h2 id="event-title"></h2>
-            <p id="event-description"></p>
-            <p id="event-date"> <span id="remain-days"></span></p>
-            <p id="event-address"></p>
-            <p id="event-price"></p>
-            <p id="event-spots"></p>
-            <p id="event-age"></p>
-            <button onclick="closeDetail()">Close</button>
-        </div> -->
-
-
-
     </div> <!-- wrapper -->
+
+    <!-- Footer -->
     <footer class="bg-[rgba(0,0,0,0.8)] text-center py-2 mt-5">
         <p class="text-gray-200">&copy; 2025 <span class="font-light text-cyan-100">event<span
                     class="font-black">ER</span></span></p>
