--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
-<body class="bg-[url('img/bg-larg.webp')] bg-cover bg-center bg-no-repeat h-screen">
+<body class="bg-[url('img/bg-large.webp')] bg-cover bg-center bg-no-repeat h-screen">
     <div class="wrapper bg-[rgba(255,255,255,0.6)] h-full">
 
         <!-- Navbar -->
-        <nav class="bg-[rgba(0,0,0,0.6)] flex items-center justify-center py-1">
-            <img src="img/logo.webp" alt="Logo" class="w-[3rem]">
-            <p class="text-3xl font-light text-cyan-100">event<span class="font-black">ER</span></p>
+        <nav class="bg-[rgba(0,0,0,0.6)] py-1">
+            <a href="./index.html" class="flex items-center justify-center">
+                <img src="img/logo.webp" alt="Logo" class="w-[3rem]">
+                <p class="text-3xl font-light text-cyan-100">event<span class="font-black">ER</span></p>
+            </a>
         </nav>
 
         <!-- Hero -->
