--- a/index.html
+++ b/index.html
@@ -22,20 +22,25 @@
 
         <!-- Hero -->
         <header class="text-gray-900 text-center lg:px-[10rem]">
-            <div class="header-wrapper px-1 flex flex-col mt-[5rem]">
+            <div class="header-wrapper px-1 flex flex-col items-center mt-[5rem]">
                 <p class="text-cyan-500 text-[18px]">Book moments that matter.</p>
-                <p class="text-4xl md:text-5xl font-light mb-8">Find and book the best events around you ; fast, simple,
-                    and personalized.</p>
 
                 <!-- For small screens -->
+                <p class="text-5xl md:text-5xl font-light mb-8 md:hidden">
+                    Find Your Next Experience!
+                </p>
+
                 <p class="text-2xl block md:hidden">
-                    From concerts and workshops to exclusive gatherings, eventER is here for you!
+                    Competitions, public lectures, hands-on workshops, national expos and more — all in one place.
                 <p>
 
                     <!-- For larg screens -->
+                <p class="text-7xl font-light mb-8 hidden md:block">
+                    Discover Local Events for Every Curiosity and Cause!
+                </p>
                 <p class="text-2xl hidden md:block">
-                    From concerts and workshops to exclusive gatherings, eventER helps you discover, book, and get
-                    reminders for events that match your vibe and age group. Never miss another moment!
+                    From public lectures and hands-on workshops to national expos and competitions, eventER helps you
+                    find meaningful experiences tailored to your interests and age.
                 <p>
                     <button id="browse-events-btn"
                         class="mt-20 text-3xl border px-10 py-5 rounded-md hover:bg-gray-900 hover:text-cyan-100">
