--- a/events.html
+++ b/events.html
@@ -89,8 +89,8 @@
     </footer>
 
 
+    <script src="list-of-events.js"></script>
     <script src="events.js"></script>
-    <script src="script.js"></script>
 </body>
 
 </html>
