--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     Competitions, public lectures, hands-on workshops, national expos and more — all in one place.
                 <p>
 
-                    <!-- For larg screens -->
+                    <!-- For large screens -->
                 <p class="text-7xl font-light mb-8 hidden md:block">
                     Discover Local Events for Every Curiosity and Cause!
                 </p>
