--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <!-- Script -->
     <script>
-        // Open events file when 'Browse Evetns' button is clicked
+        // Open events file when 'Browse Events' button is clicked
         document.querySelector('#browse-events-btn').addEventListener('click', function () {
             window.location.href = './events.html';
         })
