--- a/book-event.html
+++ b/book-event.html
@@ -222,6 +222,9 @@
     </div> <!-- wrapper -->
 
 
+    
+    <script src="events.js"></script>
+    <script src="book-event.js"></script>
     <script src="list-of-events.js"></script>
     <script src="form-validation.js"></script>
 </body>
