--- a/book-event.html
+++ b/book-event.html
@@ -25,12 +25,12 @@
                 <p class="text-3xl md:text-5xl font-bold mb-2">
                     Create account first
                 </p>
-                <form id="create-account-form" class="bg-gray-200 shadow-md rounded px-8 pt-6 pb-8 mb-4">
+                <form id="create-account-form" class="border-l border-r border-gray-300 shadow-md rounded px-8 pt-6 pb-8 mb-4">
 
                     <!-- Show selected event -->
-                    <div id="selected-event" class="mb-4">
-                        <p id="selected-event-title"></p>
-                        <div class="flex space-x-3 items-center justify-center">
+                    <div id="selected-event" class="mb-10 text-center">
+                        <p id="selected-event-title" class="font-semibold text-2xl"></p>
+                        <div class="flex space-x-3 items-center justify-evenly">
                             <p id="selected-event-date">Date</p>
                             <p id="selected-event-price">Price</p>
                             <p id="selected-event-age">Age</p>
@@ -223,7 +223,6 @@
 
 
     
-    <script src="events.js"></script>
     <script src="book-event.js"></script>
     <script src="list-of-events.js"></script>
     <script src="form-validation.js"></script>
