--- a/book-event.html
+++ b/book-event.html
@@ -22,20 +22,27 @@
         <div id="create-account-wrapper" class="relative pt-6 h-full">
             <div id="create-account" class="w-full max-w-sm md:max-w-lg max-h-[90%] overflow-y-scroll slide-in
                     absolute top-1/2 left-1/2 transform -translate-1/2 z-10">
-                <p class="text-3xl md:text-5xl font-bold mb-2">
-                    Create account first
-                </p>
-                <form id="create-account-form" class="border-l border-r border-gray-300 shadow-md rounded px-8 pt-6 pb-8 mb-4">
 
-                    <!-- Show selected event -->
-                    <div id="selected-event" class="mb-10 text-center">
-                        <p id="selected-event-title" class="font-semibold text-2xl"></p>
-                        <div class="flex space-x-3 items-center justify-evenly">
-                            <p id="selected-event-date">Date</p>
-                            <p id="selected-event-price">Price</p>
-                            <p id="selected-event-age">Age</p>
+                <!-- Selected event -->
+                <div id="selected-event-wrapper" class="mb-5 text-center text-cyan-100">
+                    <div id="selected-event" class="bg-[rgba(0,0,0,0.7)] px-2 py-4">
+                        <p id="selected-event-title" class="font-semibold text-3xl md:text-5xl"></p>
+                        <div class="flex space-x-3 items-center justify-evenly mt-4">
+                            <p id="selected-event-date"></p>
+                            <p id="selected-event-price"></p>
+                            <p id="selected-event-age" class="font-semibold"></p>
                         </div>
                     </div>
+                </div>
+
+                <!-- Header -->
+                <div class="mb-4">
+                    <p class="text-2xl md:text-3xl font-bold">Secure Your Spot Today</p>
+                    <p>Just a few details</p>
+                </div>
+
+                <form id="create-account-form"
+                    class="border-l border-r border-gray-300 shadow-md rounded px-8 pt-6 pb-8 mb-4">
 
                     <!-- First Name -->
                     <div class="mb-4">
@@ -222,7 +229,7 @@
     </div> <!-- wrapper -->
 
 
-    
+
     <script src="book-event.js"></script>
     <script src="list-of-events.js"></script>
     <script src="form-validation.js"></script>
