--- a/events.html
+++ b/events.html
@@ -91,6 +91,7 @@
 
     <script src="list-of-events.js"></script>
     <script src="events.js"></script>
+    <script src="book-event.js"></script>
 </body>
 
 </html>
