--- a/book-event.html
+++ b/book-event.html
@@ -19,7 +19,13 @@
     <div class="wrapper flex flex-col h-screen">
 
         <!-- Create account wrapper -->
-        <div id="create-account-wrapper" class="relative pt-6 h-full">
+        <div id="create-account-wrapper" class="relative pt-6 h-full border border-red-500">
+
+            <!-- Back arrow -->
+            <a href="" id="back-arrow" class="absolute top-1 left-1 md:top-5 md:left-10 text-2xl">
+                <i class="fa-solid fa-arrow-left"></i>
+            </a>
+
             <div id="create-account" class="w-full max-w-sm md:max-w-lg max-h-[90%] overflow-y-scroll slide-in
                     absolute top-1/2 left-1/2 transform -translate-1/2 z-10">
 
@@ -176,8 +182,37 @@
                         <p id="confirm-password-error" class="text-red-500 text-xs italic hidden"></p>
                     </div>
 
+                    <!-- Reminder Method -->
+                    <div class="mb-4">
+                        <label class="block text-gray-700 text-sm font-bold mb-2" for="dob">
+                            Reminder Method (Optional)
+                        </label>
+                        <div class="flex items-center space-x-5">
+                            <!-- Email -->
+                            <div class="flex items-center space-x-2">
+                                <input id="emale-reminder" name="reminder-method" type="radio" value="Email"
+                                    class="size-4 rounded-full border border-gray-300 text-indigo-600">
+                                <label for="emale-reminder" class="text-sm font-medium text-gray-900">Email</label>
+                            </div>
+
+                            <!-- SMS -->
+                            <div class="flex items-center space-x-2">
+                                <input id="sms-reminder" name="reminder-method" type="radio" value="SMS"
+                                    class="size-4 rounded-full border border-gray-300 text-indigo-600">
+                                <label for="sms-reminder" class="text-sm font-medium text-gray-900">SMS</label>
+                            </div>
+
+                            <!-- Phone Call -->
+                            <div class="flex items-center space-x-2">
+                                <input id="phone-reminder" name="reminder-method" type="radio" value="Phone call"
+                                    class="size-4 rounded-full border border-gray-300 text-indigo-600">
+                                <label for="phone-reminder" class="text-sm font-medium text-gray-900">Phone call</label>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- Submit button -->
-                    <div class="text-center mt-6">
+                    <div class="text-center mt-10">
                         <button
                             class="text-gray-700font-bold py-2 px-4 border rounded hover:bg-cyan-200 hover:border-cyan-200"
                             id="submit-btn" type="submit">
@@ -190,10 +225,10 @@
             <!-- User Details -->
             <div id="user-detail-wrapper" class="w-full max-w-sm md:max-w-lg max-h[90%]
                     absolute top-1/2 left-1/2 transform -translate-1/2 opacity-0 z-0">
-                <p class="text-gray-900 bg-green-400 mb-2 p-4 rounded-full">
+                <p class="text-gray-900 bg-green-400 mb-3 p-4 rounded-full">
                     Your data is submitted successfully!
                 </p>
-                <div id="user-detail" class="bg-cyan-100 shadow-md rounded px-8 pt-6 pb-8 mb-4">
+                <div id="user-detail" class="border-l border-r border-gray-300 rounded px-8 pt-6 pb-8 mb-4">
                     <p class="mb-2">
                         <span class="font-semibold">Full Name</span>
                         <span id="user-full-name" class="ml-2"></span>
@@ -217,6 +252,9 @@
                     <p class="mb-2">
                         <span class="font-semibold">Gender</span>
                         <span id="user-gender" class="ml-2"></span>
+                    </p>
+                    <p class="mb-2">
+                        <span id="reminder" class="font-semibold text-gray-500"></span>
                     </p>
                 </div>
             </div> <!-- user-detail-wrapper -->
