--- a/book-event.html
+++ b/book-event.html
@@ -19,7 +19,15 @@
     <div class="wrapper flex flex-col h-screen">
 
         <!-- Create account wrapper -->
-        <div id="create-account-wrapper" class="relative pt-6 h-full border border-red-500">
+        <div id="create-account-wrapper" class="relative pt-6 h-full">
+
+            <!-- Loading -->
+            <!-- <button type="button"
+                class="bg-indigo-500 absolute top-1/2 left-1/2 transform -translate-1/2 p-2" disabled>
+                <svg class="mr-3 size-5 animate-spin ..." viewBox="0 0 24 24">
+                </svg>
+                Loading…
+            </button> -->
 
             <!-- Back arrow -->
             <a href="" id="back-arrow" class="absolute top-1 left-1 md:top-5 md:left-10 text-2xl">
@@ -30,8 +38,8 @@
                     absolute top-1/2 left-1/2 transform -translate-1/2 z-10">
 
                 <!-- Selected event -->
-                <div id="selected-event-wrapper" class="mb-5 text-center text-cyan-100">
-                    <div id="selected-event" class="bg-[rgba(0,0,0,0.7)] px-2 py-4">
+                <div id="selected-event-wrapper" class="mb-5 text-center text-gray-900">
+                    <div id="selected-event" class="bg-[rgba(255,255,255,0.8)] px-2 py-4">
                         <p id="selected-event-title" class="font-semibold text-3xl md:text-5xl"></p>
                         <div class="flex space-x-3 items-center justify-evenly mt-4">
                             <p id="selected-event-date"></p>
