--- a/book-event.html
+++ b/book-event.html
@@ -21,16 +21,8 @@
         <!-- Create account wrapper -->
         <div id="create-account-wrapper" class="relative pt-6 h-full">
 
-            <!-- Loading -->
-            <!-- <button type="button"
-                class="bg-indigo-500 absolute top-1/2 left-1/2 transform -translate-1/2 p-2" disabled>
-                <svg class="mr-3 size-5 animate-spin ..." viewBox="0 0 24 24">
-                </svg>
-                Loading…
-            </button> -->
-
             <!-- Back arrow -->
-            <a href="" id="back-arrow" class="absolute top-1 left-1 md:top-5 md:left-10 text-2xl">
+            <a href="./events.html" id="back-arrow" class="absolute top-1 left-1 md:top-5 md:left-10 text-2xl">
                 <i class="fa-solid fa-arrow-left"></i>
             </a>
 
