--- a/book-event.html
+++ b/book-event.html
@@ -30,10 +30,10 @@
                     absolute top-1/2 left-1/2 transform -translate-1/2 z-10">
 
                 <!-- Selected event -->
-                <div id="selected-event-wrapper" class="mb-5 text-center text-gray-900">
-                    <div id="selected-event" class="bg-[rgba(255,255,255,0.8)] px-2 py-4">
+                <div id="selected-event-wrapper" class="mb-5 text-center text-gray-400">
+                    <div id="selected-event" class="bg-[rgba(0,0,0,0.8)] px-2 py-4">
                         <p id="selected-event-title" class="font-semibold text-3xl md:text-5xl"></p>
-                        <div class="flex space-x-3 items-center justify-evenly mt-4">
+                        <div class="flex space-x-3 items-center justify-evenly mt-4 text-gray-300">
                             <p id="selected-event-date"></p>
                             <p id="selected-event-price"></p>
                             <p id="selected-event-age" class="font-semibold"></p>
