--- a/events.html
+++ b/events.html
@@ -32,7 +32,7 @@
             <div id="event-detail" class="w-full max-w-sm md:max-w-xl text-cyan-100 rounded-md shadow-2xl
                     fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 z-20
                     opacity-0 scale-95 pointer-events-none transition-all duration-500 ease-out backdrop-blur-50">
-                <div class="px-3 md:px-8 md:py-[5rem] bg-[rgba(0,0,0,0.8)] h-full overflow-y-auto">
+                <div class="px-3 md:px-8 py-4 md:py-[5rem] bg-[rgba(0,0,0,0.8)] h-full overflow-y-auto">
                     <!-- Close icon -->
                     <p id="close-event-detail" class="text-2xl text-right mb-5 hover:text-cyan-200">
                         <i class="fa-solid fa-square-xmark"></i>
