--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                     <!-- For large screens -->
                 <p class="text-7xl font-light mb-8 hidden md:block">
-                    Find your next unforgettable experience! Extraordinary moments are waiting for you.
+                    Find your next experience! Extraordinary moments are waiting for you.
                 </p>
                 <p class="text-2xl hidden md:block">
                     From public lectures and hands-on workshops to national expos and competitions, eventER helps you
