--- a/index.html
+++ b/index.html
@@ -36,16 +36,18 @@
 
                     <!-- For large screens -->
                 <p class="text-7xl font-light mb-8 hidden md:block">
-                    Find your next experience! Extraordinary moments are waiting for you.
+                    Find your next experience! <span class="">Extraordinary moments are waiting for you.</span>
                 </p>
                 <p class="text-2xl hidden md:block">
                     From public lectures and hands-on workshops to national expos and competitions, eventER helps you
                     find meaningful experiences tailored to your interests and age.
-                <p>
-                    <button id="browse-events-btn"
-                        class="mt-20 text-3xl border px-10 py-5 rounded-md hover:bg-gray-900 hover:text-cyan-100">
-                        Browse Events >
-                    </button>
+                </p>
+
+                <!-- Browse events button -->
+                <button id="browse-events-btn"
+                    class="mt-10 text-3xl border px-10 py-5 rounded-md hover:bg-gray-900 hover:text-cyan-100">
+                    Browse Events >
+                </button>
             </div>
         </header>
     </div>
