--- a/events.html
+++ b/events.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="bg-gray-300">
     <div class="wrapper">
         <!-- Navbar -->
         <nav class="bg-[rgba(0,0,0,0.8)] py-1">
