--- a/html/form.html
+++ b/html/form.html
@@ -12,7 +12,7 @@
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
@@ -268,9 +268,9 @@
 
 
 
-    <script src="book-event.js"></script>
-    <script src="list-of-events.js"></script>
-    <script src="form-validation.js"></script>
+    <script src="../javascript/book-event.js"></script>
+    <script src="../javascript/list-of-events.js"></script>
+    <script src="../javascript/form-validation.js"></script>
 </body>
 
 </html>
