--- a/html/form.html
+++ b/html/form.html
@@ -268,7 +268,7 @@
 
 
 
-    <script src="../javascript/book-event.js"></script>
+    <script src="../javascript/form.js"></script>
     <script src="../javascript/list-of-events.js"></script>
     <script src="../javascript/form-validation.js"></script>
 </body>
