--- a/html/events.html
+++ b/html/events.html
@@ -92,7 +92,7 @@
 
     <script src="../javascript/list-of-events.js"></script>
     <script src="../javascript/events.js"></script>
-    <script src="../javascript/book-event.js"></script>
+    <script src="../javascript/form.js"></script>
 </body>
 
 </html>
