--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         // Open events file when 'Browse Events' button is clicked
         document.querySelector('#browse-events-btn').addEventListener('click', function () {
             setTimeout(() => {
-                window.location.href = './events.html';
+                window.location.href = './html/events.html';
             }, 500)
         })
     </script>
