--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
-<body class="bg-[url('./img/bg-large.webp')] bg-cover bg-center bg-no-repeat h-screen">
+<body class="bg-[url('./img/bg-small.webp')] md:bg-[url('./img/bg-large.webp')] bg-cover bg-center bg-no-repeat h-screen">
     <div class="wrapper bg-[rgba(255,255,255,0.6)] h-full">
 
         <!-- Navbar -->
